--- a/sass/_basic.scss
+++ b/sass/_basic.scss
@@ -19,6 +19,9 @@ a {
 }
 html {
   font-size: 62.5%;
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    font-size: 8.5%;
+  }
 }
 body {
   overflow-x: hidden;
