--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,6 +1,9 @@
 .logo {
   width: 6%;
   margin-right: 0.5rem;
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    width: 20%;
+  }
 }
 nav {
   display: flex;
@@ -10,10 +13,17 @@ nav {
   padding: 1rem 0;
   color: #fff;
   font-family: var(--nav-font);
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    padding: 10rem 0;
+  }
 }
 nav span b {
   font-size: 1.2rem;
   letter-spacing: 2.5px;
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    font-size: 5.2rem;
+    letter-spacing: 1.5px;
+  }
 }
 nav span a {
   margin-left: 100%;
@@ -24,6 +34,10 @@ nav span a {
   color: #fff;
   transition: all 0.5s linear;
   letter-spacing: 2px;
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    margin-left: 36%;
+    font-size: 9.3rem;
+  }
 }
 nav span a:hover {
   color: orangered;
