--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,11 @@
   width: 60vw;
   margin: 0 auto;
   padding: 1rem 0;
+
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    width: 88vw;
+    padding: 10rem 0;
+  }
 }
 
 .wlcmText {
@@ -42,6 +47,10 @@
   transition: all 0.1s linear;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.534);
   width: 300px;
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    font-size: 8rem;
+    margin: 10rem 0;
+  }
 }
 .nav-link:active {
   transform: translateY(4px);
@@ -56,6 +65,11 @@
   background-color: rgba(185, 185, 185, 0.233);
   padding: 1rem 0;
   color: orangered;
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    padding: 2rem 0;
+    font-size: 8rem;
+    letter-spacing: 3px;
+  }
 }
 
 main {
