--- a/sass/_basic.scss
+++ b/sass/_basic.scss
@@ -19,6 +19,11 @@ a {
 }
 html {
   font-size: 62.5%;
+  /*iPads, Tablets*/
+  @media screen and(min-width:481px) and (max-width: 768px) {
+    font-size: 48.5%;
+  }
+
   @media screen and (min-width: 320px) and (max-width: 480px) {
     font-size: 8.5%;
   }
