--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,6 +1,9 @@
 .logo {
   width: 6%;
   margin-right: 0.5rem;
+  @media screen and(min-width:481px) and (max-width: 768px) {
+    width: 17%;
+  }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     width: 20%;
   }
@@ -13,6 +16,22 @@ nav {
   padding: 1rem 0;
   color: #fff;
   font-family: var(--nav-font);
+
+  /*Desktops, large screens*/
+  @media screen and(min-width:1025px) and (max-width: 1200px) {
+    padding: 2rem 0;
+  }
+
+  /*Small screens, laptops*/
+  @media screen and(min-width:769px) and (max-width: 1024px) {
+    padding: 2rem 1rem;
+  }
+
+  /*iPads, Tablets*/
+  @media screen and(min-width:481px) and (max-width: 768px) {
+    padding: 2rem 1rem;
+  }
+
   @media screen and (min-width: 320px) and (max-width: 480px) {
     padding: 10rem 0;
   }
@@ -36,6 +55,7 @@ nav span a {
   letter-spacing: 2px;
   @media screen and (min-width: 320px) and (max-width: 480px) {
     margin-left: 36%;
+    padding: 4rem;
     font-size: 9.3rem;
   }
 }
