--- a/sass/_preTag.scss
+++ b/sass/_preTag.scss
@@ -7,4 +7,9 @@ div.code-toolbar > .toolbar span {
 }
 code {
   font-size: 1.5rem !important;
+
+  /*Mobile devices*/
+  @media screen and(min-width:320px) and (max-width: 480px) {
+  }
+  font-size: 8rem;
 }
