--- a/sass/_typo.scss
+++ b/sass/_typo.scss
@@ -1,8 +1,9 @@
 .mt {
   margin-top: 3rem !important;
 }
-strong {
+li > .wlcmText strong {
   font-size: 1.5rem !important;
-}
-@media screen and(min-width:320px) and (max-width: 480px) {
+  @media screen and(min-width:320px) and (max-width: 480px) {
+    font-size: 8rem !important;
+  }
 }
