--- a/sass/_preTag.scss
+++ b/sass/_preTag.scss
@@ -10,6 +10,6 @@ code {
 
   /*Mobile devices*/
   @media screen and(min-width:320px) and (max-width: 480px) {
+    font-size: 8rem !important;
   }
-  font-size: 8rem;
 }
